manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game2048-ing
  namespace: game2048
spec:
  rules:
  - host: 2048.sealio.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: game2048-svc
            port: 
              name: http-8080
